# Assignment2-cplusplus

./: .gitignore  CMakeLists.txt  README.md  kursiokai-10.txt  kursiokai-100.txt  kursiokai-1000.txt  kursiokai-10000.txt  kursiokai-100000.txt  kursiokai.txt  main.cpp  mainvector.cpp  masyvai.cpp  mokiniai-pagr.txt
includes/: Atspausdinti.cpp  Includes.cpp  MokinioInfoA.cpp  MokinioInfoM.cpp  Mokinys.h  SizeP.cpp  Skaityti.cpp
includes/Deque/: Atspausdinti.cpp  Atspausdinti1.cpp  Atspausdinti2.cpp  Deque.cpp  Kategorija.cpp  Mediana.cpp  MokinioInfo.cpp  SizeP.cpp  SizeV.cpp  Vidurkis.cpp
includes/List/: Atspausdinti.cpp  Atspausdinti1.cpp  Atspausdinti2.cpp  Kategorija.cpp  Listai.cpp  Mediana.cpp  MokinioInfo.cpp  SizeP.cpp  SizeV.cpp  Vidurkis.cpp
includes/Vector/: Atspausdinti.cpp  Atspausdinti1.cpp  Atspausdinti2.cpp  Kategorija.cpp  Mediana.cpp  MokinioInfo.cpp  SizeV.cpp  Vektoriai.cpp  Vidurkis.cpp
rezultatai/Deque/2/: mokiniai-1000_2.txt  mokiniai-100_2.txt
rezultatai/Deque/Pagr/: mokiniai-10.txt  mokiniai-100.txt
rezultatai/Vektoriai/1/: mokiniai-10000_1.txt
rezultatai/Vektoriai/2/: mokiniai-10_2.txt
rezultatai/Vektoriai/Pagr/: mokiniai-1000.txt  mokiniai-10000.txt  mokiniai-pagr.txt
